2015-06-16  Alexey Proskuryakov  <ap@apple.com>

        Tweak results for fast/canvas/canvas-too-large-to-draw.html

        * platform/mac/TestExpectations:

2015-06-16  Alexey Proskuryakov  <ap@apple.com>

        Skip the new test, fast/canvas/canvas-too-large-to-draw.html

        * platform/mac/TestExpectations:

2015-06-15  Chris Fleizach  <cfleizach@apple.com>

        AX:  iOS accessibility tests are not running because we need WKTR support
        https://bugs.webkit.org/show_bug.cgi?id=145991

        Reviewed by Daniel Bates.

        Alter tests so that it addresses:
           1) Utilize the new AX methods which created new expectations.
           2) There were some expectations checked in with failures that are now fixed.
           3) Remove failing test expectations from TestExpectations.

        * platform/ios-simulator-wk1/TestExpectations:
        * platform/ios-simulator-wk2/TestExpectations:
        * platform/ios-simulator/TestExpectations:
        * platform/ios-simulator/accessibility: Replaced with LayoutTests/platform/ios-simulator/accessibility.
        * platform/ios-simulator/accessibility/accessibility-crash-in-axcontainer-expected.txt:
        * platform/ios-simulator/accessibility/accessibility-crash-in-axcontainer.html:
        * platform/ios-simulator/accessibility/accessibility-hint-expected.txt:
        * platform/ios-simulator/accessibility/accessibility-hint.html:
        * platform/ios-simulator/accessibility/aria-label-with-internal-text-expected.txt:
        * platform/ios-simulator/accessibility/aria-label-with-internal-text.html:
        * platform/ios-simulator/accessibility/disabled-states-expected.txt:
        * platform/ios-simulator/accessibility/disabled-states.html:
        * platform/ios-simulator/accessibility/dom-focus-fires-on-correct-element-expected.txt:
        * platform/ios-simulator/accessibility/dom-focus-fires-on-correct-element.html: