@@ -1,0 +1,144 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Snap points - nested snap coordinates</title>
+    <style>
+        .scrollable {
+            overflow: scroll;
+            -webkit-overflow-scrolling: touch;
+            border: 1px dashed black;
+            height: 300px;
+            margin: 0 10px;
+        }
+    
+        .center-snap-receiver {
+            -webkit-scroll-snap-type: mandatory;
+            -webkit-scroll-snap-destination: 0 0;
+        }
+    
+        .snap-point-marker {
+            margin-top: 100px;
+            width: 15px;
+            height: 15px;
+            border: 1px solid black;
+        }
+
+        .snap-point {
+            -webkit-scroll-snap-coordinate: 0 0px;
+        }
+
+        .multiple-coordinates {
+            -webkit-scroll-snap-coordinate: 0 0px 0 100px 0 220px;
+        }
+
+        .nested {
+            border: 1px dashed blue;
+        }
+    
+        .snap-point-marker::after {
+            font-size: 1em;
+            position: relative;
+            content: '+';
+        }
+    
+        .nested > .snap-point-marker {
+            margin-left: 50px;
+            border: 1px solid red;
+        }
+        .nested > .nested > .snap-point-marker {
+            margin-left: 100px;
+            border: 1px solid blue;
+        }
+    
+        .large-content {
+            height: 3000px;
+            width: 100%;
+        }
+    
+        .small-content {
+            height: 200px;
+            width: 100%;
+        }
+
+        .invalidContainer {
+            border: 1px dashed black;
+            height: 300px;
+            margin: 0 10px;
+            opacity: 0.5;
+            overflow: hidden;
+        }
+    </style>
+        <script src="../../resources/js-test-pre.js"></script>
+        <script>
+        function runTest()
+        {
+            var container = document.getElementById('container');
+            debug("Scroll-snap offsets for 'container': " + window.internals.scrollSnapOffsets(container));
+
+            finishJSTest();
+            testRunner.notifyDone();
+        }
+
+        function onLoad()
+        {
+            if (window.testRunner) {
+                window.jsTestIsAsync = true;
+                testRunner.dumpAsText();
+                testRunner.waitUntilDone();
+                setTimeout(runTest, 0);
+            }
+        }
+        </script>
+</head>
+<body onload="onLoad();">
+    <div id="container" class="center-snap-receiver scrollable">
+        <div class="snap-point snap-point-marker"></div>
+        <div class="nested">
+            <div class="snap-point snap-point-marker"></div>
+        </div>
+        <div class="nested">
+            <div class="nested">
+                <div class="snap-point snap-point-marker"></div>
+            </div>
+        </div>
+        <div class="snap-point snap-point-marker"></div>
+        <div class="snap-point snap-point-marker"></div>
+        <div class="multiple-coordinates nested">
+            <div class="snap-point-marker"></div>
+            <div class="nested">
+                <div class="snap-point-marker"></div>
+            </div>
+        </div>
+        <div class="nested">
+            <div class="snap-point snap-point-marker"></div>
+        </div>
+        <div class="snap-point snap-point-marker"></div>
+        <div class="nested">
+            <div class="snap-point snap-point-marker"></div>
+        </div>
+        <div class="snap-point snap-point-marker"></div>
+        <div class="snap-point snap-point-marker"></div>
+        <div class="nested">
+            <div class="snap-point snap-point-marker"></div>
+        </div>
+         <div class="snap-point snap-point-marker"></div>
+        <div class="nested">
+            <div class="snap-point snap-point-marker"></div>
+        </div>
+        <div class="nested">
+            <div class="nested">
+                <div class="snap-point snap-point-marker"></div>
+            </div>
+        </div>
+        <div class="snap-point snap-point-marker"></div>
+        <div class="nested multiple-coordinates">
+            <div class="snap-point-marker"></div>
+            <div class="nested">
+                <div class="snap-point-marker"></div>
+            </div>
+        </div>
+        <div class="large-content"></div>
+    </div>
+    <script src="../../resources/js-test-post.js"></script>
+</body>
+</html>
